alexdev/static/css/main.css
/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

html {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images, videos, audio and canvas and the bottom of
 * their containers: h5bp.com/i/440
 */

audio,
canvas,
img,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browse Happy prompt
   ========================================================================== */

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/*
 * The website's font.
 * My site should never render in Arial.
 */

html {
    font-family: Corbel, "DejaVu Sans", Verdana, "Liberation Sans", Calibri, Helvetica, monospace;
    font-size: 20px;
    }

/*
 * Reduce h1 margin-bottom and make small-caps.
 */

h1 {
    margin: 0.67em 0px 0.2em;
    font-variant: small-caps;
}

/*
 * Also make the main section names in the nav bar and h2 headers small-caps.
 */

nav span.mainsection, h2 {
    font-variant: small-caps;
    }

/*
 * Center the page with a width of 800px.
 */

header, nav, article, footer, body > section, body > hr {
    width: 700px;
    margin-left: auto;
    margin-right: auto;
}

header {
    text-align: center;
}

/*
 * Set footer to a more discrete font color
 */

footer, footer a:link {
    color: #888;
}
footer a:hover {
    color: blue;
}

/*
 * The blog index.
 */

table#blog_index td {
    vertical-align: top;
}

table#blog_index td.mdash {
    padding: 0px .2em;
}

/*
 * Small and pale green tags on blog index
 */

table#blog_index span.tag {
    color: #8a8;
    font-size: .7em;
}

/*
 * Positioning for image divs.
 */

.rfloat {
    margin-left: 15px;
    margin-bottom: 15px;
    float: right;
}

.lfloat {
    margin-right: 15px;
    margin-bottom: 15px;
    float: left;
}

/*
 * Image thumbnails
 */

img.thumb {
    margin: 10px;
    border: 15px solid #2f200f;
    padding: 40px;
    background-color: #fffff5;
}

/*
 * Divs surrounding images with optional caption.
 */

.figure {
    display: inline-block;
    text-align: center;
    font-size: .8em;
    border: 1px solid #667f50;
    padding: 8px;
    margin: 4px;
    vertical-align: top;
}

/*
 * Table formatting for boitier-dordinateur-en-bois
 */

table.inbody {
    border-collapse: collapse;
    border-width: 2px 0px;
    border-style: solid;
    background-color: lightyellow;
    font-size: .8em;
}

.inbody td, .inbody th {
    padding: 2px 15px;
    border-width: 1px 0px;
    border-style: solid;
}

td.ralign, th.ralign {
    text-align: right;
}

/*
 * Center-aligns text in blocks with this class.
 */

.centered {
    margin-left: auto;
    margin-right: auto;
    display: block;
    text-align: center;
}

/*
 * Inline code
 */

code, kbd {
    font-family: Inconsolata;
    font-size: .9em;
    padding: 0px .2em;
    font-variant: normal;  /* removes small-caps in h1 tags */
}
code { background-color: #d8e8d8; }
kbd { background-color: #d8d8d8; }

/*
 * Code listings
 */

pre {
    font-family: Inconsolata, Consolas, monospace;
    font-size: 16px;
    line-height: 1em;
    background-color: #202028;
    color: #bebebe;
    padding:2mm;
    border-top:2px solid #999;
    border-left:2px solid #999;
    border-right:1px solid #CCC;
    border-bottom:1px solid #CCC;
    }

pre a:link {
    color: inherit;
}
pre a:hover {
    color: lightblue;
}

pre span.fg_color0,  pre span.fg_black                          { color: #000000; }
pre span.fg_color1,  pre span.fg_red                            { color: #d36265; }
pre span.fg_color2,  pre span.fg_green,      pre span.PS1       { color: #aece91; }
pre span.fg_color3,  pre span.fg_yellow                         { color: #e7e18c; }
pre span.fg_color4,  pre span.fg_blue                           { color: #7a7ab0; }
pre span.fg_color5,  pre span.fg_magenta                        { color: #963c59; }
pre span.fg_color6,  pre span.fg_cyan                           { color: #7f9f7f; }
pre span.fg_color7,  pre span.fg_white                          { color: #bebebe; }
pre span.fg_color8,  pre span.fg_b_black,    pre span.comment   { color: #666666; font-weight: 700; }
pre span.fg_color9,  pre span.fg_b_red                          { color: #ef8171; font-weight: 700; }
pre span.fg_color10, pre span.fg_b_green,                       { color: #e5f779; font-weight: 700; }
pre span.fg_color11, pre span.fg_b_yellow                       { color: #f0dfaf; font-weight: 700; }
pre span.fg_color12, pre span.fg_b_blue                         { color: #8e9fbc; font-weight: 700; }
pre span.fg_color13, pre span.fg_b_magenta                      { color: #ef9ebe; font-weight: 700; }
pre span.fg_color14, pre span.fg_b_cyan                         { color: #71bebe; font-weight: 700; }
pre span.fg_color15, pre span.fg_white                          { color: #ffffff; font-weight: 700; }

pre span.bg_color0,  pre span.bg_black                          { background-color: #000000; }
pre span.bg_color1,  pre span.bg_red                            { background-color: #d36265; }
pre span.bg_color2,  pre span.bg_green                          { background-color: #aece91; }
pre span.bg_color3,  pre span.bg_yellow                         { background-color: #e7e18c; }
pre span.bg_color4,  pre span.bg_blue                           { background-color: #7a7ab0; }
pre span.bg_color5,  pre span.bg_magenta                        { background-color: #963c59; }
pre span.bg_color6,  pre span.bg_cyan                           { background-color: #7f9f7f; }
pre span.bg_color7,  pre span.bg_white                          { background-color: #bebebe; }














/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

